# FastJLP

./: .gitignore  Backup.cpp  CMakeLists.txt  Check.cpp  HashTable.cpp  Kangaroo.cpp  Kangaroo.h  Makefile  Merge.cpp  Network.cpp  PartMerge.cpp  README.md  README_DEV.md  Thread.cpp  Timer.cpp  agents.md  detect_cuda.sh  in.txt  main.cpp  orch.py  rules.py
DOC/: TESTING_METAL.md
GPU/: Backend.h  BackendFactory.cpp  BackendFactory.h  GPUEngine.cu  GPUMath.h
GPU/metal/: MetalBackend.hpp  MetalBackend.mm  MetalConstants.h  MetalDistinguishedPoint.h  MetalMath.h  MetalPacking.h
Kangaroo256/: .gitignore  Network.cpp
Kangaroo256/SECPK1/: Int.cpp  Int.h  IntMod.cpp
SECPK1/: Int.cpp  Int.h  IntMod.cpp  Point.cpp  Point.h  SECP256K1.cpp
tests/: MetalBackendSmoke.mm  MetalDistinguishedPointTests.cpp  MetalPackingTests.cpp  MetalU256Smoke.mm
